@@ -62,6 +62,7 @@ Version 1.4.6 - CVS
     preference page if user has not set anything.
   - E_NOTICE and unlink error message if user hits delete multiple times
     before compose page has reloaded.
+  - Undefined variable in view_header.
 
 Version 1.4.5 - 13 July 2005
 ----------------------------
